erDiagram
    ROL ||--o{ USUARIO : "tiene"
    USUARIO ||--o{ PEDIDO : "crea"
    PEDIDO ||--|{ DETALLE_PEDIDO : "contiene"
    PRODUCTO ||--o{ DETALLE_PEDIDO : "incluido en"

    ROL {
        int Id PK
        string Nombre UK
        string Descripcion
        bit Activo
    }

    USUARIO {
        int Id PK
        string NombreUsuario UK
        string ContrasenaHash
        string NombreCompleto
        string Correo
        int RolId FK
        bit Activo
        datetime FechaCreacion
    }

    PRODUCTO {
        int Id PK
        string Clave UK
        string Nombre
        int Existencia
        decimal PrecioUnitario
        bit Activo
        datetime FechaCreacion
    }

    PEDIDO {
        int Id PK
        int UsuarioId FK
        string ClienteNombre
        decimal Total
        string Estatus
        datetime FechaCreacion
    }

    DETALLE_PEDIDO {
        int Id PK
        int PedidoId FK
        int ProductoId FK
        int Cantidad
        decimal PrecioUnitario
        decimal Subtotal
    }